Default bosh-lite CATs backend to diego
[#145311887]

Signed-off-by: Jesse Alford <jalford@pivotal.io>

--- a/templates/cf-infrastructure-bosh-lite.yml
+++ b/templates/cf-infrastructure-bosh-lite.yml
@@ -1029,6 +1029,7 @@ properties:
     skip_ssl_validation: true
     nodes: 1
     use_http: true
+    backend: diego
 
   smoke_tests:
     api:  (( "api." system_domain ))
